# IIoTDemo

./: .gitignore  README.md
DataCollectorDemo/: docker-compose.yml
DataCollectorDemo/Base/Server/: control_server.py  data_source_base.py  server_base.py
DataCollectorDemo/BaseNode/Server/: __init__.py  control_server.py  data_source_base.py  server_base.py
DataCollectorDemo/CollectorNode/: Dockerfile  Requirements.txt  config.json  main.py  requirements.txt  routes.py
DataCollectorDemo/CollectorNode/CentralConfig/: __init__.py  configuration.py  constants.py
DataCollectorDemo/CollectorNode/OpcUaClient/: __init__.py  client_manager.py  managing_server.py  my_client.py  opc_ua_client.py  opc_ua_config.py  poller.py  sub_handler.py
DataCollectorDemo/CollectorNode/Server/: __init__.py  command.py  control_server.py  data_package.py  data_source_base.py  server_base.py
DataCollectorDemo/CollectorNode/UiServer/: ui_server.py
DataCollectorDemo/CollectorNode/configs/: test.json  test_2.json
DataCollectorDemo/Common/Communication/: __init__.py  activity_selection.py  command.py  command_model.py  commandmodel.py  configuration_model.py  data_message_model.py  evaluation_model.py  message_category.py  response.py  response_model.py
DataCollectorDemo/Common/Configuration/: __init__.py  alter_configs.py
DataCollectorDemo/Common/Logging/: setup.py
DataCollectorDemo/Common/Model/: __init__.py  server_outline.py
DataCollectorDemo/ControlNode/: Dockerfile  main.py  requirements.txt  routes.py
DataCollectorDemo/ControlNode/Server/: __init__.py  control_server.py
DataCollectorDemo/EvalNode/: Dockerfile
DataCollectorDemo/Make/: build_services.sh
DataCollectorDemo/Tests/: server_testrun.py
DataCollectorDemo/Tests/TestCollectorNode/TestOpcUaClient/: test_opc_ua_client.py  test_opc_ua_config.py  test_poller.py
DataCollectorDemo/Tests/TestCollectorNode/TestServer/: test_control_server.py  test_opc_ua_managing_server.py
DataCollectorDemo/Tests/TestControlNode/TestServer/: test_control_server.py
DataCollectorDemo/Tests/TestServer/: __init__.py  opc_ua_test_server.py
DataCollectorDemo/Ui/: Dockerfile  main.py
DataCollectorDemo/Ui/Communication/: __init__.py  get_services.py  send_message.py  target.py
DataCollectorDemo/Ui/Communication/OpcUaServer/: __init__.py  function_calls.py
DataCollectorDemo/Ui/Frames/: page_client.py  page_editor.py  page_server_control.py  page_services.py
DataCollectorDemo/Ui/Frames/ServerControlHelper/: __init__.py  dialogs.py
DataCollectorDemo/UiNode/: Dockerfile  main.py  routes.py
DataCollectorDemo/UiNode/UiServer/: __init__.py  ui_server.py
DataSourceDemo/: Dockerfile  main.py  requirements.txt  start.sh
DataSourceDemo/MyServer/: __init__.py  opc_ua_server.py
DataSourceDemo/MyServer/Api/: __init__.py  api_router.py
DataSourceDemo/MyServer/Lifetime/: __init__.py  machine_model.py  machine_model_base.py  startup.py
DataSourceDemo/MyServer/MachineOperation/: __init__.py  machine_model.py  mode.py  sensor_data_model.py  sensor_type.py  state.py
DataSourceDemo/MyServer/OpcUa/: __init__.py  server_configuration.py  variant_type.py
DataSourceDemo/MyServer/Sensor/: __init__.py  mutator.py  sensor_base.py  temperature_sensor.py
DataSourceDemo/MyServer/Sensor/Modification/: TemperatureMutator.py  mutator.py
DataSourceDemo/Test/MyServerTest/: test_opc_ua_server.py
DataSourceDemo/Test/MyServerTest/ApiTest/: test_api_router.py
DataSourceDemo/Test/MyServerTest/MachineOperationTest/: test_machine_model.py
DataSourceDemo/Test/MyServerTest/SensorTest/: test_temperature_sensor.py
Native/HypothesisTesting/: CMakeLists.txt
Native/HypothesisTesting/include/: hypothesis_test.hpp  sided_hypothesis_test.hpp  spearman_test.hpp
Native/HypothesisTesting/src/: CMakeLists.txt
Native/HypothesisTesting/src/bindings/: python_bindings.cpp
Native/HypothesisTesting/src/core/: hypothesis_test.cpp  spearman_test.cpp
Native/HypothesisTesting/tests/: CMakeLists.txt  test_spearman_test.cpp
Native/ImageManipulation/: CMakeLists.txt
Native/ImageManipulation/include/: color_scaling.hpp
Native/ImageManipulation/src/: color_scaling.cpp  module.cpp
(+1 files in other folders)
